<resources>
    <string name="app_name">Room</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="sort_by_name">Sort by first name</string>
    <string name="sort_by_last_name">Sort by last name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="number">Number</string>
    <string name="delete_contact">Delete Contact</string>
</resources>